# 3dml

./: .gitignore  README.md  environment.yaml
E1/: exercise_1.ipynb  main.ipynb  pyproject.toml
E1/e1/: alignment.py  export.py  implicit_function.py  marching_cubes.py  occupancy_grid.py  point_cloud.py
E1/exercise_1/: export.py  implicit_function.py  marching_cubes.py  occupancy_grid.py  point_cloud.py  sdf_grid.py
E1/exercise_1/util/: visualization.py
E1/exercise_1/util/mlp/: model.py
E2/: main.ipynb
E2/e2/: simple_nn.py
E2/e2/data/: shapenet.py  shapenet_parts.py
E2/e2/inference/: infer_3dcnn.py  infer_pointnet_classification.py  infer_pointnet_segmentation.py
E2/e2/model/: cnn3d.py  pointnet.py
E2/e2/training/: train_3dcnn.py  train_pointnet_classification.py  train_pointnet_segmentation.py
E3/: exercise_3.ipynb  pyproject.toml
E3/exercise_3/data/: shape_implicit.py  shapenet.py
E3/exercise_3/inference/: infer_3depn.py  infer_deepsdf.py
E3/exercise_3/model/: deepsdf.py  threedepn.py
E3/exercise_3/training/: train_3depn.py  train_deepsdf.py
E3/exercise_3/util/: mesh_collection_to_gif.py
